# TimeTraveller

./: .gitignore  README.md  install.sh  pyproject.toml  timetraveller.desktop
debian/: changelog  control  copyright  dirs  install  prerm  rules
docs/design/: archive-integrity.md  archive-management.md  (+1 more)
libexec/: timetraveller-delete-system-archives  timetraveller-install-system-cron  timetraveller-maintain-system-archive  timetraveller-run-system-backup  timetraveller-write-system-config
polkit/: com.timetraveller.delete-system-archives.policy  com.timetraveller.install-system-crontab.policy  com.timetraveller.maintain-system-archive.policy  com.timetraveller.run-system-backup.policy  com.timetraveller.write-system-config.policy
prototype/: bench_integrity.py  bench_write.py  fast_extract.py  frame_write.py  frame_write_inprocess.py  run_ab.py  scan_file_index.py  scan_file_index_fast.py  shard_backup.py  test_frame_correctness.py
tests/: test_action_list_archives.py  test_archive.py  test_archive_listing.py  test_archive_panel_search_fixes.py  test_backup_helper.py  test_delete_actions.py  test_delete_dialog.py  test_delete_escalation.py  test_delete_helper.py  test_extract.py  test_finalize_archive.py  test_frame_checksums.py  test_framewriter.py  test_framewriter_compat.py  test_framewriter_crash.py  test_has_sidecar.py  test_heal.py  test_idx_v2.py  test_inline_index.py  test_maint_helper.py  test_manifest.py  test_manifest_mirror.py  test_meta_and_export.py  test_pax_naming.py  test_pax_status.py  test_prune_to_newest.py  test_recover_failed.py  test_reindex_tracker.py  test_remove_plan.py  test_restore_bootstrap.py  test_restore_source.py  test_retention.py  test_schedule.py  test_search.py  test_sharding_model.py  test_sharding_write.py  test_sidecar_mirror.py  test_system_plan_names.py  test_worker_kind.py
timetraveller/: __init__.py  archive.py  config.py  extract.py  framewriter.py  heal.py  index.py  manifest.py  mounts.py  pax.py  restore_bootstrap.py  restore_source.py  retention.py  schedule.py  search.py  worker.py
(+17 files in other folders)
